--- a/website/scss/abstracts/_variables.scss
+++ b/website/scss/abstracts/_variables.scss
@@ -28,3 +28,6 @@ $border-radius: 1rem;
 
 $small-side-padding: 1rem;
 $side-padding: 2rem;
+
+$card-padding: 4rem 2rem;
+$small-card-padding: 2rem 1rem;
