--- a/website/scss/components/_card.scss
+++ b/website/scss/components/_card.scss
@@ -3,7 +3,11 @@
 
 .card {
     background: $dark-gradient;
-    padding: 4rem 2rem;
+    padding: $card-padding;
+    @include display-small {
+        padding: $small-card-padding;
+    }
+
     min-height: 20rem;
     border-radius: $border-radius;
     z-index: 10;
